// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $23,513,432,112.34
  </h1>
</div>
`;
